# OpenPinch

./: .bumpversion.toml  .gitignore  .readthedocs.yaml  LICENSE  Manuscript-OpenPinch-clean.docx  Notes.txt  OPENHENS_MIGRATION_PLAN.md  PLAN.md  README.md  RTD_OVERHAUL_PLAN.md  __init__.py  __main__.py  couenne.opt  coverage.json  pyproject.toml  pytest.ini  streamlit_app.py
.github/workflows/: ci-develop.yml  ci-publish.yml  ci-pull-request.yml
Excel_Version/: Data_input_template.xlsx  OpenPinch-v4.00.xlsb  OpenPinch-v4.01.xlsb  OpenPinch-v4.02.xlsb
OpenPinch/: __init__.py  __main__.py  main.py  resources.py
OpenPinch/adapters/: __init__.py
OpenPinch/analysis/: __init__.py  additional_analysis.py  area_targeting.py  capital_cost_and_area_targeting.py  data_preparation.py  direct_integration_entry.py  economics.py  energy_transfer_analysis.py  exchanger_unit_targeting.py  exergy_targeting.py  gcc_manipulation.py  graph_data.py  graphing.py  graphs.py  heat_pump_and_refrigeration_targeting.py  heat_pump_targeting.py  heat_transfer.py  indirect_integration_entry.py  numerics.py  operation_analysis.py  power_cogeneration_analysis.py  problem_table_analysis.py  process_analysis.py  region_analysis.py  response.py  site_analysis.py  stream_linearisation.py  support_methods.py  temperature_driving_force.py  utility_targeting.py
OpenPinch/application/: __init__.py  problem.py  targeting.py  workspace.py
OpenPinch/classes/: __init__.py  _problem_table_constants.py  _stream_profile.py  _stream_thermodynamics.py  _stream_value_state.py  _stream_value_view.py  _workspace_support.py  brayton_heat_pump.py  cascade_heat_pump.py  cascade_vapour_compression_cycle.py  energy_target.py  heat_exchanger.py  heat_exchanger_network.py  multi_simple_heat_pump.py  multi_stage_steam_turbine.py  parallel_vapour_compression_cycles.py  pinch_problem.py  pinch_workspace.py  problem_table.py  process_components.py  simple_heat_pump.py  stream.py  stream_collection.py  target.py  value.py  vapour_compression_cycle.py  zone.py
OpenPinch/contracts/: __init__.py  common.py  controllability.py  graphs.py  hpr.py  input.py  output.py  report_units.py  reporting.py  turbine.py  units.py  workspace.py
OpenPinch/data/: __init__.py
OpenPinch/domain/: __init__.py  configuration.py  configuration_fields.py  enums.py  fluids.py  heat_exchanger.py  heat_exchanger_network.py  problem_table.py  stream.py  stream_collection.py  targets.py  value.py  zone.py
OpenPinch/examples/: recreate_json.py
OpenPinch/lib/: __init__.py  config.py  config_metadata.py  configuration.txt  enums.py  heat_exchanger_network_types.py  problem_table_types.py  schema.py  target_schema.py  unit_system.py
OpenPinch/optimisation/: __init__.py  candidates.py  errors.py  execution.py  models.py  service.py
OpenPinch/presentation/: __init__.py  configuration.py
OpenPinch/scales/: __init__.py  community_analysis.py  entry.py  process_analysis.py  region_analysis.py  response.py  site_analysis.py  unit_operation_analysis.py
OpenPinch/services/: __init__.py  services_entry.py
OpenPinch/streamlit_webviewer/: web_graphing.py
OpenPinch/utils/: __init__.py  _tabular_input.py  blackbox_minimisers.py  costing.py  csv_to_json.py  decorators.py  export.py  heat_exchanger.py  heat_exchanger_eq.py  heat_pump.py  input_validation.py  interpolator.py  miscellaneous.py  multiscale_targeting.py  optimiser.py  optional_dependencies.py  plots.py  stream_linearisation.py  value_resolution.py  water_properties.py  wkbook_to_json.py
aidlc-docs/: aidlc-state.md  audit.md  compatibility-shim-cleanup-clarification-questions.md  compatibility-shim-cleanup-questions.md  compatibility-shim-representation-questions.md
create_json/: OP format.xlsx  wkbook_to_json_ut_targeting.py
docs/: conf.py  getting-started.rst  index.rst  release-notes.rst  requirements.txt
docs/_data/: tutorial-coverage.csv
docs/api/: cli-and-resources.rst  domain-model.rst  generated-index.rst  index.rst  package-root.rst  pinchproblem.rst  pinchworkspace.rst  schemas-and-config.rst  service-layer.rst
docs/developer/: architecture.rst  build-and-coverage.rst  docs-conventions.rst  index.rst  openhens-integration-task-files.rst  synthesis-dependency-policy.rst
docs/examples/: decision-workflows.rst  index.rst  notebook-series.rst  sample-cases.rst  tutorial-coverage-map.rst
docs/fundamentals/: cogeneration-methods.rst  direct-vs-indirect-integration.rst  graphs-and-interpretation.rst  heat-pump-and-refrigeration-methods.rst  index.rst  pinch-analysis.rst  problem-table-and-temperature-shifting.rst  zones-streams-utilities-and-targets.rst
examples/: 01_basic_pinch_and_dtcont_sensitivity.ipynb  debug_support_notebook.ipynb  p_Varbanov et al.json  recreate_json.py
openhens_baseline_results/: README.md  baseline_manifest.json  comparison.csv  comparison.json
plans/: multi_state_utility_targeting.md
scripts/: artifact_install_smoke.py  benchmark_performance.py  build_dist.py  build_docs.py  check_lockfile_version.py  check_release_tag.py  compare_openhens_openpinch_top5.py  convert_openhens_fixtures.py  format_repo.py  generate_tutorial_coverage.py  generate_tutorial_notebooks.py  optional_install_smoke.py  update_toolchain.py
src/: __init__.py
tests/: TEST_COVERAGE_SUMMARY.md  __init__.py  test_architecture_boundaries.py  test_cli.py  test_docs_build.py  test_docs_consistency.py  test_heat_exchanger_network_array_adapter.py  test_heat_exchanger_network_grid_diagram.py  test_heat_exchanger_network_pinch_parity.py  test_heat_exchanger_network_public_service.py  test_heat_exchanger_network_synthesis_hens08.py  test_heat_exchanger_network_synthesis_hens11.py  test_heat_exchanger_network_synthesis_models.py  test_heat_exchanger_network_synthesis_workflow.py  test_lazy_barrels_and_synthesis_ownership.py  test_notebooks.py  test_optional_dependencies.py  test_package_api_surface.py  test_packaging_metadata.py  test_python_syntax.py  test_release_artifacts.py  test_release_tag.py  test_repo_entrypoints.py  test_sample_cases.py  test_synthesis_dependency_boundaries.py
(+1761 files in other folders)
