[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
  "/examples/**",
  "/tests/fixtures/workbooks/**",
  "**/__pycache__/**",
  "**/.DS_Store",
  "**/*.py[cod]",
]

[tool.hatch.build.targets.sdist]
include = [
  "/LICENSE",
  "/README.md",
  "/pyproject.toml",
  "/OpenPinch",
]
exclude = [
  "/.gitignore",
]

[tool.hatch.build.targets.wheel]
packages = ["OpenPinch"]
[project]
name = "OpenPinch"
dependencies=[
  "numpy",
  "pint",
  "pandas",
  "coolprop",
  "pydantic",
  "scipy",
]
version = "0.4.5"
authors = [
  { name="Tim Walmsley", email="tim.walmsley@waikato.ac.nz" },
]
description = "An advanced pinch analysis and total site integration toolkit"
readme = "README.md"
requires-python = ">=3.14.2"
classifiers = [
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/waikato-ahuora-smart-energy-systems/OpenPinch"
Issues = "https://github.com/waikato-ahuora-smart-energy-systems/OpenPinch/issues"

[project.scripts]
openpinch = "OpenPinch.__main__:main"

[project.optional-dependencies]
dashboard = [
  "streamlit",
  "plotly",
  "openpyxl",
  "pyxlsb",
]
brayton_cycle = [
  "tespy",
]
synthesis = [
  "pyomo>=6.10.0",
  "gekko>=1.3.2",
  "plotly>=6.8.0",
  "kaleido>=1.3.0",
  "openpyxl>=3.1.5",
  "wakepy>=1.0.0",
  "idaes-pse>=2.11.0",
]
notebook = [
  "ipykernel>=7.2.0",
  "nbformat>=5.10.4",
  "plotly",
  "openpyxl",
  "pyxlsb",
]
full = [
  "streamlit",
  "plotly",
  "openpyxl",
  "pyxlsb",
  "tespy",
  "ipykernel>=7.2.0",
  "nbformat>=5.10.4",
]

[dependency-groups]
dev = [
    "build>=1.3.0",
    "hatchling>=1.26",
    "ipykernel>=7.2.0",
    "nbformat>=5.10.4",
    "pytest>=9.0.3",
    "ruff>=0.15.8",
    "sphinx>=9.1.0",
    "sphinx-rtd-theme>=3.1.0",
    "black>=23.9",
    "streamlit",
    "pyomo>=6.10.0",
    "gekko>=1.3.2",
    "plotly>=6.8.0",
    "kaleido>=1.3.0",
    "openpyxl>=3.1.5",
    "wakepy>=1.0.0",
    "pyxlsb",
    "tespy",
    "pylint>=4.0.5",
    "graphviz>=0.21",
    "idaes-pse>=2.11.0",
]

[tool.black]
line-length = 88
target-version = ["py314"]

[tool.ruff]
line-length = 88
target-version = "py314"
extend-exclude = ["docs/_build", "dist", "OpenPinch/data/notebooks"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B006"]
ignore = ["E203"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["F403", "F405", "E501"]
"OpenPinch/lib/config_metadata.py" = ["E501"]
"OpenPinch/services/energy_transfer_analysis/energy_transfer_analysis.py" = ["E501"]
"OpenPinch/services/exergy_analysis/exergy_targeting_entry.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
